Fix wallet type alignment at Sidebar

--- a/web/statics/css/app.css
+++ b/web/statics/css/app.css
@@ -4407,7 +4407,7 @@ header {
       display: flex;
       align-items: center;
       justify-content: center;
-      width: 90%;
+      width: 100%;
       padding: 20px 0;
       margin-bottom: 20px;
       border-top: 1px solid #e8e8e8;
