--- a/web/statics/scss/_factom.scss
+++ b/web/statics/scss/_factom.scss
@@ -317,7 +317,7 @@ header {
             display: flex;
             align-items: center;
             justify-content: center;
-            width: 90%;
+            width: 100%;
             padding: 20px 0;
             margin-bottom: 20px;
             border-top: $border-gray-light;
